Add tomlib logo assets and integrate logo in documentation and `.idea` configurations. Enhance `DocumentationGenerator` to include logo in generated docs and update Gradle tasks for logo management.